:sparkles: added user enabled
